<resources>
    <string name="app_name">Password Generator</string>
    <string name="app_name_long">Privacy Friendly Password Generator</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="undo">Undo</string>
    <string name="item_deleted">deleted.</string>
    <string name="initial_alert">ADD ACCOUNT</string>
    <string name="placeholder_no_data" translatable="false">-</string>
    <string name="add_metadata_heading">Add new account</string>
    <string name="domain">Account name:</string>
    <string name="username">Username:</string>
    <string name="username_optional">Username (optional):</string>
    <string name="characterset_add">The password will consist of:</string>
    <string name="special_characters">Special (+!#)</string>
    <string name="letters_upper">Uppercase (ABC)</string>
    <string name="letters_lower">Lowercase (abc)</string>
    <string name="numbers">Numbers (123)</string>
    <string name="length">Length: </string>
    <string name="iteration">Version: </string>
    <string name="add_domain_message">Please add an account name.</string>
    <string name="add_character_message">Please choose at least one character type.</string>
    <string name="change_version_closed">▶ Change Version</string>
    <string name="change_version_opened">▼ Change Version</string>
    <string name="current_version">Current password version: </string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="characterset">Character set:</string>
    <string name="old_password">Old password:</string>
    <string name="new_password">New password:</string>
    <string name="master_password_description">The master password is required to generate the old and new password.</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="old_version">The old password version is %s.</string>
    <string name="new_version">The new version will be </string>
    <string name="added_message">Account updated.</string>
    <string name="canceled_message">Update canceled.</string>
    <string name="add_new_metadata_heading">1. Update account</string>
    <string name="passwords_heading">2. Your passwords</string>
    <string name="copy_clipboar_old">Old password copied.</string>
    <string name="copy_clipboar_new">New password copied.</string>
    <string name="dialog_version_title">What is a password version?</string>
    <string name="dialog_version">The version of a password is a number that indicates how many passwords an account has had. It is used to generate a different password even if neither the master password
        nor any other data regarding the account is changed.  </string>
    <string name="generate_heading">Generate Password</string>
    <string name="generate">Generate</string>
    <string name="master_password_heading">Master password:</string>
    <string name="enter_masterpassword">Please, enter a master password.</string>
    <string name="masterpassword_length">Please, enter at least 8 characters.</string>
    <string name="password">Your password:</string>
    <string name="init_password"></string>
    <string name="done">Done</string>
    <string name="password_copied">Password copied.</string>
    <string name="about">About</string>
    <string name="version_number">Version</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">Karola Marky</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Karlsruhe Institute of Technology. Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-passwordgenerator">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="help">Help</string>
    <string name="help_overview">What is Privacy Friendly Password Generator?</string>
    <string name="help_overview_answer">Privacy Friendly Password Generator generates unique passwords for all your accounts. After generation you have to enter the password manually to the website or service.</string>
    <string name="help_generation">How do I generate a password?</string>
    <string name="help_generation_answer">To generate a password choose an account out of the list and click on it. Enter your master password and then press the "generate" button. The password can than
    be copied to website or service by writing or the using the clipboard.</string>
    <string name="help_parameter_set_heading">What is an account?</string>
    <string name="help_parameter_set_answer">Website providers often use password composition policies.
    These policies should direct our password choices and might force us to create passwords with special characteristics like a minimum length. An account describes properties of the generated password.</string>
    <string name="help_which_parameters_heading">Which properties of a password can be chosen?</string>
    <string name="help_which_parameters_domain">The account name is reference to the website or item the password is used for.</string>
    <string name="help_which_parameters_username">The optional username can be used to distinguish between different users for the same account name.</string>
    <string name="help_which_parameters_characterset">The character set describes which types of characters should be included into the password. Websites often have recommendations regarding the character set of a password.</string>
    <string name="help_which_parameters_length">The length of the password can be chosen between 4 and 25.</string>
    <string name="help_which_parameters_password_counter">The password version is required to generate different passwords with the same account data in case of an update. The default value is 1. The counter is incremented by one on every update, but can also be changed manually.</string>
    <string name="help_manage_add_heading">How can I add an account?</string>
    <string name="help_manage_add_description">Add a new account by pressing the plus button.</string>
    <string name="help_manage_update_heading">How can I update an account?</string>
    <string name="help_manage_update_description">Update an account set by a long press on the list item.</string>
    <string name="help_manage_delete_heading">How can I delete an account?</string>
    <string name="help_manage_delete_description">Delete an account set by swiping to one side.</string>
    <string name="help_generation_heading">How are the passwords generated?</string>
    <string name="help_generation_description">The passwords are generated by a combination of two hashing algorithms: PBKDF2 and BCrypt. The master password serves as secret for both algorithms. The salts are derived from the account data. If enabled in the settings, an installation salt (generated at first startup) is also added to the salt.</string>
    <string name="help_password_storage_heading">Are the passwords stored on the device?</string>
    <string name="help_password_storage_description">No. Neither the passwords, nor the master password are stored on the device. Only the account data and the installation salt are stored on your device.</string>
    <string name="help_data_backup_heading">Is there a way to backup my data?</string>
    <string name="help_data_backup_description">Yes. You can use the Privacy Friendly Backup app to backup your account data and the installation salt. In this way, the data can also be transferred to another device.</string>
    <string name="help_permissions_heading">Which permissions are required by Privacy Friendly Password Generator?</string>
    <string name="help_permissions_description">Privacy Friendly Password Generator does not require any permission.</string>
    <string name="title_reset_list">Delete all accounts</string>
    <string name="delete_dialog">Do you really wish to delete all accounts?</string>
    <string name="delete_dialog_success">All accounts deleted.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_bind_password">Bind all passwords to this installation</string>
    <string name="summary_bind_password">This creates unique passwords based on this device. The passwords cannot be regenerated by using another device or reinstalling the app. Therefore we strongly recommend to backup the data of this app using the Privacy Friendly Backup app if using this option. Otherwise it will be impossible to regenerate the passwords in case you lose your device.</string>
    <string name="title_clipboard">Copy passwords to clipboard</string>
    <string name="summary_clipboard">All other apps will have access to your password on the clipboard.</string>
    <string name="title_expert_mode">Expert mode</string>
    <string name="expert_mode_summary">Changing the Bcrypt cost parameter will generate different passwords. A higher value increases the time it takes to generate the password. This makes it more difficult for an attacker. With the benchmark function you can test how long it takes to generate a password with the current settings. The default value is 10.</string>
    <string name="title_hash_iterations">PBKDF2: Number of hash iterations</string>
    <string name="title_benchmark">Benchmark: generation</string>
    <string name="summary_benchmark">Test the duration of generating based on the given algorithm and iteration.</string>
    <string name="title_hash_algorithms">PBKDF2: Hash algorithm</string>
    <string-array name="pref_hash_algorithms" translatable="false">
        <item>SHA256</item>
        <item>SHA384</item>
        <item>SHA512</item>
    </string-array>
    <string name="default_hash_algorithm" translatable="false">SHA256</string>
    <string-array name="pref_iterations" translatable="false">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
        <item>10000</item>
    </string-array>
    <string name="default_iterations" translatable="false">10000</string>
    <string name="title_bcrypt_cost">Bcrypt: Cost parameter</string>
    <string-array name="pref_bcrypt_cost" translatable="false">
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
    </string-array>
    <string name="default_bcrypt_cost" translatable="false">10</string>
    <string name="okay">OKAY</string>
    <string name="dialog_start_benchmark">Start</string>
    <string name="dialog_start_benchmark_hint">Please start the benchmark.</string>
    <string name="dialog_benchmark_title">Benchmark</string>
    <string name="dialog_benchmark_seconds">seconds</string>
    <string name="dialog_benchmark_time">The generation will take approximately</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Welcome!</string>
</resources>