<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="main_preferences">

        <SwitchPreference
            android:title="@string/title_bind_password"
            android:id="@+id/pref_binding_switch"
            android:key="bindToDevice_enabled"
            android:summary="@string/summary_bind_password"
            android:defaultValue="false"/>
        <SwitchPreference
            android:title="@string/title_clipboard"
            android:id="@+id/pref_clipboard_switch"
            android:key="clipboard_enabled"
            android:summary="@string/summary_clipboard"
            android:defaultValue="false"/>
        <Preference
            android:title="@string/title_reset_list"
            android:id="@+id/pref_reset_list"
            android:key="pref_reset_list" />

    <PreferenceCategory
        android:title="@string/title_expert_mode">
        <Preference
            android:summary="@string/expert_mode_summary"/>

        <ListPreference
            android:title="@string/title_bcrypt_cost"
            android:key="bcrypt_cost"
            android:entries="@array/pref_bcrypt_cost"
            android:entryValues="@array/pref_bcrypt_cost"
            android:defaultValue="@string/default_bcrypt_cost"
            android:summary="@string/default_bcrypt_cost"/>
        <Preference
            android:key="benchmark"
            android:title="@string/title_benchmark"
            android:summary="@string/summary_benchmark"/>
    </PreferenceCategory>

</PreferenceScreen>