<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/textViewUpdateMasterpasswordHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master_password_heading" />

    <EditText
        android:id="@+id/editTextUpdateMasterpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/textViewUpdateMasterpasswordDescitption"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master_password_description" />

    <Button
        android:id="@+id/displayButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_normal"
        android:text="@string/generate"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/textViewOldPasswordHeading"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password" />

    <TextView
        android:id="@+id/textViewOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/init_password"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewNewPasswordHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password" />

    <TextView
        android:id="@+id/textViewNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/init_password"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>