<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewDomainDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domain" />

        <TextView
            android:id="@+id/domainHeadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/textViewDomainDescription"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewIterationHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iteration" />

        <TextView
            android:id="@+id/textViewIteration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/textViewIterationHeading"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/textViewMasterpasswordHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master_password_heading" />

    <EditText
        android:id="@+id/editTextMasterpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/textViewMPasswordHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/init_password"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/generatorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_normal"
        android:text="@string/generate"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>