<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/textViewUpdateMasterpasswordHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master_password_heading" />

    <EditText
        android:id="@+id/editTextUpdateMasterpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/textViewUpdateMasterpasswordDescitption"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master_password_description" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/nextUpdateMasterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/next"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/cancelUpdateMasterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentTop="true"
            />

    </RelativeLayout>


</LinearLayout>