<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/textViewDomainHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/domain" />

    <EditText
        android:id="@+id/editTextDomainUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="42" />

    <CheckBox
        android:id="@+id/checkBoxSpecialCharacterUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/special_characters" />

    <CheckBox
        android:id="@+id/checkBoxLettersUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/letters" />

    <CheckBox
        android:id="@+id/checkBoxNumbersUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/numbers" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewLengthHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/length" />

        <TextView
            android:id="@+id/textViewLengthDisplayUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/textViewLengthHeading"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekBarLengthUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="12"
        android:progress="6" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewIterationHeadingUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/iteration" />

        <EditText
            android:id="@+id/EditTextIterationUpdate"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:maxLength="4"
            android:inputType="number"
            android:layout_toEndOf="@+id/textViewIterationHeadingUpdate"/>

    </RelativeLayout>

</LinearLayout>