<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <TextView
                android:id="@+id/domainTextView"
                style="@style/Base.DialogWindowTitle.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DOMAIN"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/domainTextView"
                android:layout_marginTop="5dp"
                android:text="@string/username" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/domainTextView"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/usernameTextView" />

            <TextView
                android:id="@+id/lengthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usernameTextView"
                android:layout_marginTop="5dp"
                android:text="@string/length" />

            <TextView
                android:id="@+id/length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usernameTextView"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/lengthTextView" />

            <TextView
                android:id="@+id/iterationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lengthTextView"
                android:layout_marginTop="5dp"
                android:text="@string/iteration" />

            <TextView
                android:id="@+id/iteration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lengthTextView"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/iterationTextView" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hasNumbersTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/hasSymbolsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/hasLettersLowTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/hasLettersUpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>